fixed typo in function call

--- a/templating/templates/content/evaluated.template.html
+++ b/templating/templates/content/evaluated.template.html
@@ -24,7 +24,7 @@
               {{ENDFOREACH}}
             </td>
             <td>[[numAnswers.getVal([[resultTuple.getId()]])]]</td>
-            <td>&#956;=[[resultTuple.getMu()]], &#963;=[[result.getSigma()]]</td>
+            <td>&#956;=[[resultTuple.getMu()]], &#963;=[[resultTuple.getSigma()]]</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" href="evaluated.php?view=[[resultTuple.getId()]]"><i class="material-icons">info</i></a>
             </td>
