added view for evaluated tuple

--- a/templating/templates/content/evaluated/index.template.html
+++ b/templating/templates/content/evaluated/index.template.html
@@ -10,7 +10,7 @@
           <th>Query/Queries</th>
           <th># Answers</th>
           <th>Gaussian</th>
-          <th>View</th>
+          <th class="right-align">View</th>
         </tr>
       </thead>
 
