added menu and foot to evaluated view

--- a/templating/templates/content/evaluated/tuple.template.html
+++ b/templating/templates/content/evaluated/tuple.template.html
@@ -1,4 +1,5 @@
 {%TEMPLATE->struct/head%}
+{%TEMPLATE->struct/menu%}
 <main style="margin-top: 50px;">
   <div class="container">
     <style>
@@ -32,4 +33,4 @@
   </div>
 </main>
 <!-- [[loadTime]] - [[security]] -->
-{%TEMPLATE->struct/emptyfoot%}
+{%TEMPLATE->struct/foot%}
