added drawing of gaussian curve

--- a/templating/templates/content/evaluated/tuple.template.html
+++ b/templating/templates/content/evaluated/tuple.template.html
@@ -30,6 +30,11 @@
     </div>
     <br>
     TODO: show Gaussian curve here
+    <div class="row">
+      {{IF [[imageData]]}}
+        <img src="[[imageData]]">
+      {{ENDIF}}
+    </div>
   </div>
 </main>
 <!-- [[loadTime]] - [[security]] -->
