made gaussian responsive

--- a/templating/templates/content/evaluated/tuple.template.html
+++ b/templating/templates/content/evaluated/tuple.template.html
@@ -32,7 +32,7 @@
     TODO: show Gaussian curve here
     <div class="row">
       {{IF [[imageData]]}}
-        <img src="[[imageData]]">
+        <img src="[[imageData]]" class="responsive-img">
       {{ENDIF}}
     </div>
   </div>
