added isFinal as attribute of ResultTuple

--- a/templating/templates/content/evaluated/tuple.template.html
+++ b/templating/templates/content/evaluated/tuple.template.html
@@ -34,6 +34,7 @@
         <img src="[[imageData]]" class="responsive-img">
       {{ENDIF}}
     </div>
+    TODO: show more information about this tuple
   </div>
 </main>
 <!-- [[loadTime]] - [[security]] -->
