added pruning in general

--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -5,7 +5,8 @@
     <div class="container">
       <div class="row">
         <h3>Admin Home</h3>
-        <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important these answers will be considered as very certain)
+        <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important: These answers will be considered as very certain)<br>
+        <a class="btn-large waves-effect waves-light blue" href="prune.php" target="_blank">Start Prune Session</a> (Important: what you answer here will be immediately taken as evaluated result and will not be included in the evaluation)
       </div>
     </div>
   {{ELSE}}
