added pruning for queries

--- a/templating/templates/views/prune.template.html
+++ b/templating/templates/views/prune.template.html
@@ -45,7 +45,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <button class="btn waves-effect waves-light" name="answer" value="3" type="submit">Nearly Identical</button>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button class="btn waves-effect waves-light yellow" name="answer" value="-1" type="submit">Skip</button>
+          <button class="btn waves-effect waves-light yellow black-text" name="answer" value="-1" type="submit">Skip</button>
         </div>
       </form>
     </div>
