--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -20,6 +20,12 @@
             <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[queryObjectId]]"><i class="material-icons">visibility</i></a>
           </td>
         </tr>
+        <tr>
+          <th>Pruning Session</th>
+          <td>
+            <a class="btn-large waves-effect waves-light yellow black-text" href="prune.php" target="_blank">Start Prune Session</a><br><br>(Important: what you answer here will be immediately taken as evaluated result and will not be included in the evaluation)
+          </td>
+        </tr>
       </tbody>
     </table>
 
