added prune answers handling

--- a/templating/templates/views/prune.template.html
+++ b/templating/templates/views/prune.template.html
@@ -33,6 +33,7 @@
       <form action="" method="post">
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
+        <input type="hidden" name="resultTupleId" value="[[tuple.getId()]]">
 
         <b>How similar are these two objects?</b><br><br>
 
