reverted fix added GET variable

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -23,7 +23,7 @@
         <tr>
           <th>Pruning Session</th>
           <td>
-            <a class="btn-large waves-effect waves-light yellow black-text" href="prune.php" target="_blank">Start Prune Session</a><br><br>(Important: what you answer here will be immediately taken as evaluated result and will not be included in the evaluation)
+            <a class="btn-large waves-effect waves-light yellow black-text" href="prune.php?queryId=[[query.getId()]]" target="_blank">Start Prune Session</a><br><br>(Important: what you answer here will be immediately taken as evaluated result and will not be included in the evaluation)
           </td>
         </tr>
       </tbody>
