changed if for 0 percentage

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -24,7 +24,7 @@
           <th>Evaluation Progress</th>
           <td>
             <div class="progress">
-              {{IF [[progressPercentage]]}}
+              {{IF [[progressPercentage]] >= 0}}
                 <div class="determinate" style="width: [[progressPercentage]]%"></div>
               {{ELSE}}
                 <div class="indeterminate"></div>
