added percentage of evaluation progress to query overview

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -29,7 +29,7 @@
               {{ELSE}}
                 <div class="indeterminate"></div>
               {{ENDIF}}
-            </div><br>
+            </div>
             Total Result Tuples: [[progress.getVal('total')]]<br>
             Fully evaulated: [[progress.getVal('done')]]<br>
             Partially evaluated: [[progress.getVal('partial')]]
