--- a/templating/templates/content/queries/index.template.html
+++ b/templating/templates/content/queries/index.template.html
@@ -12,6 +12,7 @@
           <th>ID</th>
           <th>Query Name</th>
           <th>Added by User</th>
+          <th>Evaluation Progress</th>
           <th>Is completed</th>
           <th>&nbsp;</th>
         </tr>
@@ -23,6 +24,7 @@
             <td>[[query.getId()]]</td>
             <td>[[query.getDisplayName()]]</td>
             <td>[[Util::getUsernameById([[query.getUserId()]])]]</td>
+            <td>[[percentages.getVal([[query.getId()]])]]%</td>
             <td>{{IF [[query.getIsClosed()]] == 0}}No{{ELSE}}YES{{ENDIF}}</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" href="queries.php?view=[[query.getId()]]"><i class="material-icons">info</i></a>
