--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -50,6 +50,8 @@
         <tr>
           <th>ID</th>
           <th>Media Type</th>
+          <th>Tuple Values</th>
+          <th>Fully Evaluated</th>
           <th>&nbsp;</th>
         </tr>
       </thead>
@@ -59,6 +61,8 @@
           <tr>
             <td>[[result.getId()]]</td>
             <td>[[Util::getMediaTypeNameForObject([[result.getObjectId2()]])]]</td>
+            <td>&#956;=[[resultTuple.getMu()]], &#963;=[[resultTuple.getSigma()]]</td>
+            <td>{{IF [[result.getIsFinal()]] == 1}}Yes{{ELSE}}No{{ENDIF}}</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[result.getObjectId2()]]"><i class="material-icons">visibility</i></a>
             </td>
