--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -61,7 +61,7 @@
           <tr>
             <td>[[result.getId()]]</td>
             <td>[[Util::getMediaTypeNameForObject([[result.getObjectId2()]])]]</td>
-            <td>&#956;=[[resultTuple.getMu()]], &#963;=[[resultTuple.getSigma()]]</td>
+            <td>&#956;=[[result.getMu()]], &#963;=[[result.getSigma()]]</td>
             <td>{{IF [[result.getIsFinal()]] == 1}}Yes{{ELSE}}No{{ENDIF}}</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[result.getObjectId2()]]"><i class="material-icons">visibility</i></a>
