removed target blank

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -64,7 +64,7 @@
             <td>&#956;=[[result.getMu()]], &#963;=[[result.getSigma()]]</td>
             <td>{{IF [[result.getIsFinal()]] == 1}}Yes{{ELSE}}No{{ENDIF}}</td>
             <td class="right-align">
-              <a class="btn-floating waves-effect waves-light green" target="_blank" href="evaluated.php?view=[[result.getId()]]"><i class="material-icons">trending_up</i></a>&nbsp;&nbsp;
+              <a class="btn-floating waves-effect waves-light green" href="evaluated.php?view=[[result.getId()]]"><i class="material-icons">trending_up</i></a>&nbsp;&nbsp;
               <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[result.getObjectId2()]]"><i class="material-icons">visibility</i></a>
             </td>
           </tr>
