added placeholder when mu and sigma are not calculated yet

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -61,7 +61,13 @@
           <tr>
             <td>[[result.getId()]]</td>
             <td>[[Util::getMediaTypeNameForObject([[result.getObjectId2()]])]]</td>
-            <td>&#956;=[[result.getMu()]], &#963;=[[result.getSigma()]]</td>
+            <td>
+              {{IF [[result.getMu()]] == -1 || [[result.getSigma()]] == -1}}
+                N/A
+              {{ELSE}}
+                &#956;=[[result.getMu()]], &#963;=[[result.getSigma()]]
+              {{ENDIF}}
+            </td>
             <td>{{IF [[result.getIsFinal()]] == 1}}Yes{{ELSE}}No{{ENDIF}}</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light green" href="evaluated.php?view=[[result.getId()]]"><i class="material-icons">trending_up</i></a>&nbsp;&nbsp;
