added placeholder game name

--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -11,7 +11,7 @@
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     {{ELSE}}
-      <a id="logo-container" href="index.php" class="brand-logo">TODO: good name</a>
+      <a id="logo-container" href="index.php" class="brand-logo">[[GameName]]</a>
       <ul class="right hide-on-med-and-down">
         {%TEMPLATE->struct/menu_entries%}
       </ul>
