--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -13,7 +13,7 @@
       <div class="col l3 s12">
         <ul>
           <li><a class="white-text" href="https://github.com/s3inlc/cineast-evaluator">Github</a></li>
-          <li><a class="white-text" href="#!">Link 2</a></li>
+          <li><a class="white-text" href="admin.php">Admin</a></li>
         </ul>
       </div>
     </div>
