updated index page

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -3,13 +3,9 @@
 <main>
   <div class="container">
     <div class="row">
-      Welcome to <i>TODO: insert some title here</i>!<br><br>
-      This is the gamification part of the Cineast Evaluator<br><br>
-      {{IF [[oauth.isLoggedin()]]}}
-        Hey [[oauth.getPlayer().getPlayerName()]], you are logged in with oauth!
-      {{ELSE}}
-        You are not logged in!
-      {{ENDIF}}
+      <h3>[[GameName]]</h3>
+      Hey, wanna have some fun and play a game?<br>
+      <a class="btn-large waves-effect waves-light blue" href="session.php">Click here</a>
     </div>
   </div>
 </main>
