--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -3,9 +3,24 @@
 <main>
   <div class="container">
     <div class="row">
-      <h3>[[GameName]]</h3>
-      Hey, wanna have some fun and play a game?<br>
-      <a class="btn-large waves-effect waves-light blue" href="session.php">Click here</a>
+      <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+          <div class="row">
+            <div class="col s12 m4">
+              <!-- placeholder -->
+            </div>
+
+            <div class="col s12 m4 center">
+              <h4 class="center">Hey, wanna have some fun and play a game?</h4>
+              <a class="btn-large waves-effect waves-light green" href="session.php">Start</a>
+            </div>
+
+            <div class="col s12 m4">
+              <!-- placeholder -->
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </main>
