--- a/templating/templates/content/disclaimer.template.html
+++ b/templating/templates/content/disclaimer.template.html
@@ -6,7 +6,7 @@
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           <div class="row">
-            <div class="col s12 m12">
+            <div class="col s12 m12 black-text">
               <h3>Disclaimer</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porttitor tellus at mauris lacinia
