fixed button name

--- a/templating/templates/content/disclaimer.template.html
+++ b/templating/templates/content/disclaimer.template.html
@@ -80,7 +80,7 @@
           </div>
           <div class="row center">
             <form action="session.php" method="post">
-              <button type="submit" class="btn-large waves-effect waves-light green">I have read the disclaimer and I
+              <button type="submit" name="disclaimerAccept" class="btn-large waves-effect waves-light green">I have read the disclaimer and I
                 accept it
               </button>
             </form>
