--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -5,16 +5,18 @@
     <div class="row">
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
-          <div class="row">
-            <div class="col s12 m12 black-text">
+          <div class="row black-text">
+            <div class="col s12 m12">
               <h3>Round Finished!</h3>
               Total Score: [[score.getVal('totalScore')]]<br>
             </div>
             {{IF [[sizeof([[achievements]])]] > 0}}
-              <h3>You reached achievements!</h3>
-              {{FOREACH achievement;[[achievements]]}}
-                Reached: [[achievement.getAchievementName()]]<br>
-              {{ENDFOREACH}}
+              <div class="col s12 m12">
+                <h3>You reached achievements!</h3>
+                {{FOREACH achievement;[[achievements]]}}
+                  Reached: [[achievement.getAchievementName()]]<br>
+                {{ENDFOREACH}}
+              </div>
             {{ENDIF}}
           </div>
           {{IF ![[oauth.isLoggedin()]]}}
