--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -5,6 +5,14 @@
     <div class="row">
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
+          {{IF [[oauth.isLoggedin()]]}}
+            <div class="row">
+              <div class="col s12 m2">
+                <b>Hey [[oauth.getPlayer().getPlayerName()]]</b><br>
+                Play some more games to get missing achievements ;)
+              </div>
+            </div>
+          {{ENDIF}}
           <div class="row">
             <div class="col s12 m2">
               <!-- placeholder -->
