--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -6,8 +6,8 @@
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           {{IF [[oauth.isLoggedin()]]}}
-            <div class="row">
-              <div class="col s12 m2">
+            <div class="row black-text">
+              <div class="col s12 m12">
                 <b>Hey [[oauth.getPlayer().getPlayerName()]]</b><br>
                 Play some more games to get missing achievements ;)
               </div>
@@ -19,7 +19,7 @@
             </div>
 
             <div class="col s12 m8 center">
-              <h3 class="center">Hey, wanna have some fun and play a game?</h3>
+              <h3 class="center black-text">Hey, wanna have some fun and play a game?</h3>
               <a class="btn-large waves-effect waves-light green" href="session.php">Start</a>
             </div>
 
