--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -6,7 +6,7 @@
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           {{IF [[oauth.isLoggedin()]]}}
-            <div class="row black-text">
+            <div class="row black-text large center">
               <div class="col s12 m12">
                 <b>Hey [[oauth.getPlayer().getPlayerName()]]</b><br>
                 Play some more games to get missing achievements ;)
