made text larger

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -8,7 +8,7 @@
           {{IF [[oauth.isLoggedin()]]}}
             <div class="row black-text large center">
               <div class="col s12 m12">
-                <b>Hey [[oauth.getPlayer().getPlayerName()]]</b><br>
+                <h3>Hey [[oauth.getPlayer().getPlayerName()]]</h3><br>
                 Play some more games to get missing achievements ;)
               </div>
             </div>
@@ -19,7 +19,7 @@
             </div>
 
             <div class="col s12 m8 center">
-              <h3 class="center black-text">Hey, wanna have some fun and play a game?</h3>
+              <h2 class="center black-text">Hey, wanna have some fun and play a game?</h2>
               <a class="btn-large waves-effect waves-light green" href="session.php">Start</a>
             </div>
 
