header text change

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -8,8 +8,8 @@
           {{IF [[oauth.isLoggedin()]]}}
             <div class="row black-text large center">
               <div class="col s12 m12">
-                <h3>Hey [[oauth.getPlayer().getPlayerName()]]</h3><br>
-                Play some more games to get missing achievements ;)
+                <h4>Hey [[oauth.getPlayer().getPlayerName()]]</h4><br>
+                <h5>Play some more games to get missing achievements ;)</h5>
               </div>
             </div>
           {{ENDIF}}
