--- a/templating/templates/content/achievements.template.html
+++ b/templating/templates/content/achievements.template.html
@@ -3,7 +3,18 @@
 <main>
   <div class="container">
     <div class="row">
-      
+      <div id="Just sending packages" class="achievement hoverable">
+        <div class="achievement-img-container">
+          <img src="static/placeholder.png">
+        </div>
+        <div class="achievement-content-container">
+          <div class="achievement-header">
+            <span class="achievement-title">Just sending packages</span>
+          </div>
+          <span class="achievement-description">Definition of the network communication is generic</span>
+        </div>
+      </div>
+
     </div>
   </div>
 </main>
