added more placeholder achievements to test

--- a/templating/templates/content/achievements.template.html
+++ b/templating/templates/content/achievements.template.html
@@ -3,15 +3,43 @@
 <main>
   <div class="container">
     <div class="row">
-      <div class="achievement hoverable">
-        <div class="achievement-img-container">
-          <img src="static/placeholder.png">
-        </div>
-        <div class="achievement-content-container">
-          <div class="achievement-header">
-            <span class="achievement-title">Test Achievement</span>
+      <div class="col s12 m6">
+        <div class="achievement hoverable">
+          <div class="achievement-img-container">
+            <img src="static/placeholder.png">
           </div>
-          <span class="achievement-description">Blublublublub description</span>
+          <div class="achievement-content-container">
+            <div class="achievement-header">
+              <span class="achievement-title">Test Achievement 1</span>
+            </div>
+            <span class="achievement-description">Blublublublub description</span>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="achievement hoverable achieved">
+          <div class="achievement-img-container">
+            <img src="static/placeholder.png">
+          </div>
+          <div class="achievement-content-container">
+            <div class="achievement-header">
+              <span class="achievement-title">Test Achievement 2</span>
+            </div>
+            <span class="achievement-description">Blublublublub description</span>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="achievement hoverable">
+          <div class="achievement-img-container">
+            <img src="static/placeholder.png">
+          </div>
+          <div class="achievement-content-container">
+            <div class="achievement-header">
+              <span class="achievement-title">Test Achievement 3</span>
+            </div>
+            <span class="achievement-description">Blublublublub description</span>
+          </div>
         </div>
       </div>
     </div>
