--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ main {
 
 .achievement-img-container img{
     border: 3px solid #808080;
+    width: 80px;
     border-radius: 6px;
     filter: brightness(.75) grayscale(0.5);
 }
