fixed template syntax error

--- a/templating/templates/content/queries/index.template.html
+++ b/templating/templates/content/queries/index.template.html
@@ -24,7 +24,7 @@
             <td>[[query.getId()]]</td>
             <td>[[query.getDisplayName()]]</td>
             <td>[[Util::getUsernameById([[query.getUserId()]])]]</td>
-            <td>[[[[query.getProgress()]]%</td>
+            <td>[[query.getProgress()]]%</td>
             <td>{{IF [[query.getIsClosed()]] == 0}}No{{ELSE}}YES{{ENDIF}}</td>
             <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" href="queries.php?view=[[query.getId()]]"><i class="material-icons">info</i></a>
