--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -44,6 +44,10 @@
   $(document).ready(function() {
       $('select').material_select();
   });
+  $(document).ready(function(){
+      // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+      $('.modal').modal();
+  });
 </script>
 
 </body>
