--- a/templating/templates/views/help.template.html
+++ b/templating/templates/views/help.template.html
@@ -1,4 +1,4 @@
-<div id="modal1" class="modal">
+<div id="helpModal" class="modal">
   <div class="modal-content">
     <h4>Help</h4>
     <p>TODO....</p>
