--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -47,6 +47,9 @@
   $(document).ready(function(){
       // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
       $('.modal').modal();
+      {{IF [[forceOpenHelp]]}}
+        $('#helpModal').modal('open');
+      {{ENDIF}}
   });
 </script>
 
