--- a/templating/templates/views/help.template.html
+++ b/templating/templates/views/help.template.html
@@ -1,12 +1,12 @@
 <div id="helpModal" class="modal">
   <div class="modal-content">
-    <h4>[[GameName]]Help</h4>
+    <h4>[[GameName]] Help</h4>
     <p>
       TODO:<br>
       Write some help text here to explain how this works.
     </p>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
   </div>
 </div>
