--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -7,8 +7,9 @@
         <div class="section no-pad-bot">
           <div class="row black-text">
             <div class="col s12 m12">
-              <h3>Round Finished!</h3>
-              Total Score: [[score.getVal('totalScore')]]<br>
+              <span class="score-game">Game Score: [[score.getVal('gameScore')]]</span><br>
+              <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br>
+              <span class="score-total">Total Score: [[score.getVal('totalScore')]]</span><br>
             </div>
             {{IF [[sizeof([[achievements]])]] > 0}}
               <div class="col s12 m12">
