--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -6,7 +6,7 @@
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           <div class="row black-text">
-            <div class="col s12 m12">
+            <div class="col s12 m12 center">
               <span class="score-game">Game Score: [[score.getVal('gameScore')]]</span><br>
               <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br>
               <span class="score-total">Total Score: [[score.getVal('totalScore')]]</span><br>
