--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -6,10 +6,12 @@
       <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           <div class="row black-text">
-            <div class="col s12 m12 center">
-              <span class="score-game">Base Score: [[score.getVal('baseScore')]]</span><br>
-              <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br>
-              <span class="score-total">Total Score: [[score.getVal('totalScore')]]</span><br>
+            <div class="col s12 m12 center score-text">
+              Base Score:<br>
+              <span class="score-game">[[score.getVal('baseScore')]]</span><br><br>
+              <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br>
+              Total Score:<br>
+              <span class="score-total">[[score.getVal('totalScore')]]</span><br>
             </div>
             {{IF [[sizeof([[achievements]])]] > 0}}
               <div class="col s12 m12">
