--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -7,7 +7,7 @@
         <div class="section no-pad-bot">
           <div class="row black-text">
             <div class="col s12 m12 center score-text">
-              Base Score:<br>
+              <br><br>Base Score:<br>
               <span class="score-game">[[score.getVal('baseScore')]]</span><br><br>
               <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br>
               Total Score:<br>
