--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -9,8 +9,7 @@
             <div class="col s12 m12 center score-text">
               <br><br>Base Score:<br>
               <span class="score-game">[[score.getVal('baseScore')]]</span><br><br>
-              <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br>
-              Total Score:<br>
+              <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br><br>
               <span class="score-total">[[score.getVal('totalScore')]]</span><br>
             </div>
             {{IF [[sizeof([[achievements]])]] > 0}}
