added code to count games in row

--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -39,7 +39,7 @@
             </div>
           {{ENDIF}}
           <div class="row center">
-            <a class="btn-large waves-effect waves-light blue" href="session.php">Start new Game</a>
+            <a class="btn-large waves-effect waves-light blue" href="session.php?refer=game">Start new Game</a>
           </div>
         </div>
       </div>
