added space below help button

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -9,7 +9,7 @@
         align-items: baseline;
       }
     </style>
-    <a class="btn-floating btn-large waves-effect waves-light green right" href="#helpModal">Help</a>
+    <a class="btn-floating btn-large waves-effect waves-light green right" href="#helpModal">Help</a><br>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col m12" style="text-align: center;">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
