--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -5,6 +5,7 @@
     <h3>Settings</h3>
 
     <form action="settings.php" method="post">
+      <input type="hidden" name="action" value="changeUsername">
       <div class="row">
         <div class="input-field col s12">
           <input id="playerName" type="text" name="playerName" value="[[player.getPlayerName()]]" class="validate">
